--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^3.8.1
-  hexcolor: ^3.0.1
   cloud_firestore: ^5.5.1
   intl:
   font_awesome_flutter: ^10.8.0
   getwidget: ^5.0.0
+  indian_currency_to_word: ^1.0.0
+
 
 dev_dependencies:
   flutter_test:
